syntax = "proto3";

package com.apixio.doctraces;

import "com/apixio/doctraces/Error.proto";

message IndexTrace {
  string patientKey = 1;
  repeated Error errors = 2;
}